--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -25,7 +25,7 @@
 <div class="middle-box text-center loginscreen">
     <div style="padding: 100px 0px;">
         <div>
-            <img alt="image" class="img-circle"
+            <img alt="image"
                  src="${ctxPath}/static/img/logo_drc.png"
                  width="180px" height="180px"/>
         </div>
