跟进表创建

--- a/src/main/webapp/WEB-INF/view/common/_tab.html
+++ b/src/main/webapp/WEB-INF/view/common/_tab.html
@@ -10,7 +10,7 @@
 	                       	<img alt="image" class="img-circle" 
 					          src="${ctxPath}/static/img/logo_drc_white.png"
 					           width="32px" height="32px"/>
-	                       	<strong class="font-bold">XXX系统</strong>
+	                       	<strong class="font-bold">世豪鼎瑞客户管理</strong>
                        	</span>
                     </a>
                 </div>
