--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>XXX系统 - 登录</title>
+    <title>世豪鼎瑞客户资源管理系统 - 登录</title>
 
     <link rel="shortcut icon" href="${ctxPath}/static/favicon.ico">
     <link href="${ctxPath}/static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
@@ -29,7 +29,7 @@
                  src="${ctxPath}/static/img/logo_drc.png"
                  width="180px" height="180px"/>
         </div>
-        <h3 style="margin-top: 20px;">欢迎使用XXX系统</h3>
+        <h3 style="margin-top: 20px;">世豪鼎瑞客户资源管理系统</h3>
         <h4 style="color: red;margin-top: 20px;">${tips!}</h4>
         <form class="m-t" role="form" id="form" action="${ctxPath}/login" method="post">
             <div class="form-group">
