客户经理客户资源详情

--- a/src/main/webapp/WEB-INF/view/customer/customer/customer_import.html
+++ b/src/main/webapp/WEB-INF/view/customer/customer/customer_import.html
@@ -9,7 +9,11 @@
                 <form class="m-t" enctype="multipart/form-data" action="${ctxPath}/customer/readExcel" method="post">
                     <div class="form-horizontal" id="customerInfoForm">
                         <h4 style="color: red;margin-top: 20px;text-align: center;">温馨提示：请下载相应客户类型模板进行填写上传至系统</h4>
-                        <h4 style="color: red;margin-top: 20px;">${tips!}</h4>
+                        <h4 style="color: red;margin-top: 20px;">
+                            @if(tips!='init'){
+                                ${tips!}
+                            @}
+                        </h4>
 
                         <div class="row">
                             <div class="col-sm-4 b-r">
@@ -24,8 +28,8 @@
                             </div>
                             <div class="col-sm-8">
                                 <div class="form-group">
-                                    <label class="col-sm-1 control-label">数据导入</label>
-                                    <div class="col-sm-11">
+                                    <label class="col-sm-2 control-label">数据导入</label>
+                                    <div class="col-sm-10">
                                         <input type="file" name="uploadFile" id="uploadFile">
 
                                     </div>
@@ -44,4 +48,12 @@
         </div>
     </div>
 </div>
+<script>
+    $(function () {
+        var tips = '${tips}';
+        if(tips!='init'){
+            Feng.error(tips);
+        }
+    });
+</script>
 @}
