--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -19,7 +19,18 @@
     <script src="${ctxPath}/static/js/common/Feng.js"></script>
     <script src="${ctxPath}/static/js/plugins/layer/layer.js"></script>
 </head>
-
+<style>
+    body{
+        background: #18c8f6;
+        height: auto;
+        background:url("${ctxPath}/static/img/login-background.jpg") no-repeat center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        color: #333;
+    }
+</style>
 <body class="gray-bg">
 
 <div class="middle-box text-center loginscreen">
