--- a/src/main/webapp/WEB-INF/view/customer/cusfollow/cusfollow.html
+++ b/src/main/webapp/WEB-INF/view/customer/cusfollow/cusfollow.html
@@ -47,8 +47,19 @@
                                 <option value="0">全部</option>
                                 <option value="1">系统录入</option>
                                 <option value="2">Excel导入</option>
-                            </#SelectCon>
-                        </div>
+                                </#SelectCon>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="input-group">
+                                    <div class="input-group-btn">
+                                        <button data-toggle="dropdown" class="btn btn-white dropdown-toggle" type="button">
+                                            跟进人
+                                        </button>
+                                    </div>
+                                    <select class="chosen-select" id="followuserid" style="width: 120px;border-color: #F5F5F5">
+                                    </select>
+                                </div>
+                            </div>
                         <div class="col-sm-3">
                             <#button name="搜索" icon="fa-search" clickFun="Cusfollow.search()"/>
                         </div>
