通用模板修改 意向标记功能

--- a/src/main/webapp/WEB-INF/view/customer/customer/customer_import.html
+++ b/src/main/webapp/WEB-INF/view/customer/customer/customer_import.html
@@ -20,10 +20,10 @@
                                 <#select id="customertype" name="客户类型" underline="true">
                                     <option value="1">车辆抵押客户</option>
                                     <option value="2">房产抵押客户</option>
-<!--                                    <option value="3">其他</option>-->
+                                    <option value="3">其他</option>
                                 </#select>
-                                <a href="${ctxPath}/kaptcha/template/车辆抵押客户模板.xlsx/车辆抵押客户模板.xlsx" title="车辆抵押客户模板下载">车辆抵押客户模板下载</a><br/><br/>
-                                <a href="${ctxPath}/kaptcha/template/房产抵押客户模板.xlsx/房产抵押客户模板.xlsx" title="房产抵押客户模板下载">房产抵押客户模板下载</a><br/><br/>
+                                <a href="${ctxPath}/kaptcha/template/通用客户模板.xlsx/通用客户模板.xlsx" title="通用客户模板下载">通用客户模板下载</a><br/><br/>
+<!--                                <a href="${ctxPath}/kaptcha/template/房产抵押客户模板.xlsx/房产抵押客户模板.xlsx" title="房产抵押客户模板下载">房产抵押客户模板下载</a><br/><br/>-->
 <!--                                <a href="${ctxPath}/kaptcha/template/其他客户模板.xlsx/其他客户模板.xlsx" title="其他客户模板下载">其他客户模板下载</a>-->
                             </div>
                             <div class="col-sm-8">
