--- a/src/main/webapp/WEB-INF/view/customer/customer/customer.html
+++ b/src/main/webapp/WEB-INF/view/customer/customer/customer.html
@@ -49,7 +49,10 @@
                                 <option value="1">系统录入</option>
                                 <option value="2">Excel导入</option>
                             </#SelectCon>
-                        </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <#NameCon id="importremark" name="导入备注" />
+                            </div>
                         <div class="col-sm-3">
                             <#button name="搜索" icon="fa-search" clickFun="Customer.search()"/>
                         </div>
