--- a/src/main/webapp/WEB-INF/view/customer/customer/customer_import.html
+++ b/src/main/webapp/WEB-INF/view/customer/customer/customer_import.html
@@ -22,6 +22,7 @@
                                     <option value="2">房产抵押客户</option>
                                     <option value="3">其他</option>
                                 </#select>
+                                <#input id="importremark" name="导入数据备注" underline="true"/>
                                 <a href="${ctxPath}/kaptcha/template/通用客户模板.xlsx/通用客户模板.xlsx" title="通用客户模板下载">通用客户模板下载</a><br/><br/>
 <!--                                <a href="${ctxPath}/kaptcha/template/房产抵押客户模板.xlsx/房产抵押客户模板.xlsx" title="房产抵押客户模板下载">房产抵押客户模板下载</a><br/><br/>-->
 <!--                                <a href="${ctxPath}/kaptcha/template/其他客户模板.xlsx/其他客户模板.xlsx" title="其他客户模板下载">其他客户模板下载</a>-->
@@ -39,7 +40,7 @@
 
                         <div class="row btn-group-m-t">
                             <div class="col-sm-10">
-                                <button type="submit" class="btn btn-primary" icon="fa-check">导入</button>
+                                <button type="submit" class="btn btn-primary" icon="fa-check" onclick="return submitForm()">导入</button>
                             </div>
                         </div>
                     </div>
@@ -55,5 +56,12 @@
             Feng.error(tips);
         }
     });
+    function submitForm() {
+        if ($('#importremark').val().trim().length == 0){
+            Feng.error("请输入导入数据备注");
+            return false;
+        }
+        return true;
+    }
 </script>
 @}
