--- a/src/main/webapp/WEB-INF/view/customer/cussuccess/mysuccess.html
+++ b/src/main/webapp/WEB-INF/view/customer/cussuccess/mysuccess.html
@@ -23,6 +23,7 @@
                                     <option value="0">全部</option>
                                     <option value="1">车辆抵押客户</option>
                                     <option value="2">房产抵押客户</option>
+                                    <option value="3">其他</option>
                                 </#SelectCon>
                             </div>
                         </div>
