上传模板校验、管理员禁止删除冻结

--- a/src/main/webapp/WEB-INF/view/system/user/user_roleassign.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user_roleassign.html
@@ -12,6 +12,10 @@
 
         $("#btn_save").bind("click", function () {
             var ids = Feng.zTreeCheckedNodes("zTree");
+            if(ids.length>1){
+                Feng.error("只允许选择一种角色!");
+                return;
+            }
             var ajax = new $ax(Feng.ctxPath + "/mgr/setRole", function (data) {
                 Feng.success("分配角色成功!");
                 window.parent.MgrUser.table.refresh();
