成交跟进逻辑修改 数据库字段修改

--- a/src/main/webapp/WEB-INF/view/customer/cusfollow/cusfollow.html
+++ b/src/main/webapp/WEB-INF/view/customer/cusfollow/cusfollow.html
@@ -27,12 +27,15 @@
                                 </#SelectCon>
                             </div>
                             <div class="col-sm-2">
-                                <#SelectCon id="customerstatus" name="客户状态">
-                                    <option value="0">全部</option>
-                                    <option value="1">非意向</option>
-                                    <option value="2">意向</option>
-                                </#SelectCon>
+                                <#NameCon id="importremark" name="导入备注" />
                             </div>
+<!--                            <div class="col-sm-2">-->
+<!--                                <#SelectCon id="customerstatus" name="客户状态">-->
+<!--                                    <option value="0">全部</option>-->
+<!--                                    <option value="1">非意向</option>-->
+<!--                                    <option value="2">意向</option>-->
+<!--                                </#SelectCon>-->
+<!--                            </div>-->
                         </div>
                         <div class="row">
                             <div class="col-sm-2">
@@ -48,9 +51,7 @@
                                 <option value="2">Excel导入</option>
                                 </#SelectCon>
                             </div>
-                            <div class="col-sm-2">
-                                <#NameCon id="importremark" name="导入备注" />
-                            </div>
+
                             <div class="col-sm-2">
                                 <div class="input-group">
                                     <div class="input-group-btn">
