--- a/src/main/webapp/WEB-INF/view/customer/cusfollow/myfollow.html
+++ b/src/main/webapp/WEB-INF/view/customer/cusfollow/myfollow.html
@@ -26,13 +26,13 @@
                                     <option value="3">其他</option>
                                 </#SelectCon>
                             </div>
-                            <div class="col-sm-2">
-                                <#SelectCon id="customerstatus" name="客户状态">
-                                    <option value="0">全部</option>
-                                    <option value="1">非意向</option>
-                                    <option value="2">意向</option>
-                                </#SelectCon>
-                            </div>
+<!--                            <div class="col-sm-2">-->
+<!--                                <#SelectCon id="customerstatus" name="客户状态">-->
+<!--                                    <option value="0">全部</option>-->
+<!--                                    <option value="1">非意向</option>-->
+<!--                                    <option value="2">意向</option>-->
+<!--                                </#SelectCon>-->
+<!--                            </div>-->
                         </div>
                         <div class="row">
                             <div class="col-sm-2">
