--- a/src/main/webapp/WEB-INF/view/customer/cusfollow/myfollow.html
+++ b/src/main/webapp/WEB-INF/view/customer/cusfollow/myfollow.html
@@ -42,8 +42,19 @@
                                 <#TimeCon id="endTime" name="结束时间" isTime="false" pattern="YYYY-MM-DD" />
                             </div>
                             <div class="col-sm-2">
-                                <#NameCon id="importremark" name="导入备注" />
+                                <div class="input-group">
+                                    <div class="input-group-btn">
+                                        <button data-toggle="dropdown" class="btn btn-white dropdown-toggle" type="button">
+                                            导入备注
+                                        </button>
+                                    </div>
+                                    <select class="chosen-select" id="importremark" name="importremark" style="width: 120px;border-color: #F5F5F5">
+                                    </select>
+                                </div>
                             </div>
+<!--                            <div class="col-sm-2">-->
+<!--                                <#NameCon id="importremark" name="导入备注" />-->
+<!--                            </div>-->
                             <div class="col-sm-3">
                                 <#button name="搜索" icon="fa-search" clickFun="Myfollow.search()"/>
                             </div>
