--- a/src/main/webapp/WEB-INF/view/customer/customer/customer_customermanager.html
+++ b/src/main/webapp/WEB-INF/view/customer/customer/customer_customermanager.html
@@ -49,8 +49,19 @@
                             </#SelectCon>
                             </div>
                             <div class="col-sm-2">
-                                <#NameCon id="importremark" name="导入备注" />
+                                <div class="input-group">
+                                    <div class="input-group-btn">
+                                        <button data-toggle="dropdown" class="btn btn-white dropdown-toggle" type="button">
+                                            导入备注
+                                        </button>
+                                    </div>
+                                    <select class="chosen-select" id="importremark" name="importremark" style="width: 120px;border-color: #F5F5F5">
+                                    </select>
+                                </div>
                             </div>
+<!--                            <div class="col-sm-2">-->
+<!--                                <#NameCon id="importremark" name="导入备注" />-->
+<!--                            </div>-->
                         <div class="col-sm-3">
                             <#button name="搜索" icon="fa-search" clickFun="Customer.search()"/>
                         </div>
