根据导入备注删除客户信息

--- a/src/main/webapp/WEB-INF/view/customer/customer/customer_import.html
+++ b/src/main/webapp/WEB-INF/view/customer/customer/customer_import.html
@@ -61,6 +61,7 @@
             Feng.error("请输入导入数据备注");
             return false;
         }
+        Feng.info("正在导入数据,请稍等......  请不要再次执行导入操作!!!");
         return true;
     }
 </script>
